force-app/main/staging/objects/Staging_Header__c/Staging_Header__c.object-meta.xml
<CustomObject>
    <description>This will be a header for staging an imported Salesforce record that needs some form of validation before it is accepted into Salesforce</description>
    <label>Staging Header</label>
    <nameField>
        <displayFormat>SH-{0000000}</displayFormat>
        <label>Staging Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>