force-app/main/staging/objects/Staging_Header__c/fields/Change_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Change_Datetime__c</fullName>
    <description>Date time the change occurred in the external system, this is used to ensure changes that are sent in the api call are only created once in Salesforce</description>
    <label>Change Datetime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>