force-app/main/staging/objects/Staging_Header__c/fields/For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>For_Deletion__c</fullName>
    <description>This formula will determine when the staging records should be deleted from the system after being approved</description>
    <formula>AND(
 ISPICKVAL(Status__c, &quot;Approved&quot;),
 LastModifiedDate &lt; (NOW() - 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Deletion</label>
    <type>Checkbox</type>
</CustomField>