force-app/main/staging/objects/Staging_Header__c/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>The object API name that the target record should be moved to</description>
    <label>Salesforce Object</label>
    <length>83</length>
    <type>Text</type>
</CustomField>