force-app/main/staging/objects/Staging_Header__c/fields/Source_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Unique_Id__c</fullName>
    <description>This is the unique id from the source system, this can aid in any matching that is required with existing Salesforce records</description>
    <externalId>true</externalId>
    <label>Source Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>