force-app/main/staging/objects/Staging_Header__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>This will hold the unique id for the staging record, this will be a concatenation of the source object name, the change date and the source unique id</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>